syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "AvatarExpeditionInfo.proto";

// CmdId: 1636
// EnetChannelId: 0
// EnetIsReliable: true
message AvatarExpeditionAllDataRsp {
	int32 retcode = 11;
	map<uint64, AvatarExpeditionInfo> expedition_info_map = 1;
	repeated uint32 open_expedition_list = 6;
	uint32 expedition_count_limit = 7;
}
